# spark_bot

./: .dockerignore  .gitignore  AGENT_PLAN.md  BUILD_ANDROID.md  Dockerfile  PLAN.md  README.md  SPARK.md  bot.py  context.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  result.py
.github/workflows/: build_apk.yml
app/: context.py  deps.py  main.py  models.py
app/routes/: agent.py  ai.py  backup.py  claude_route.py  context_route.py  crypto.py  habit.py  notes.py  settings.py  skills.py  tools.py
app/services/: agent.py  ai.py
commands/: agent.py  ai.py  ask.py  claude_cmd.py  crypto.py  download.py  habit.py  help.py  localize.py  log.py  login.py  model.py  note.py  pomodoro.py  quote.py  recall.py  registry.py  remember.py  remind.py  skills.py  spark.py  start.py  todo.py  tools.py  weather.py
data/: spark_data.json
docs/superpowers/plans/: 2026-04-03-spark-python-rewrite.md
docs/superpowers/specs/: 2026-04-03-spark-python-rewrite-design.md
documentation/: IDEA.md  Kanban.md  Suivi.md  help_me.md  todo.md
flutter_app/: STANDALONE_PLAN.md  pubspec.yaml
flutter_app/lib/: config.dart  main.dart  theme.dart
flutter_app/test/: widget_test.dart
src/: bot.rs
src/commands/: localize.rs  remember.rs  weather.rs
src/core/: command_info.rs  structures.rs
tests/: test_bot.py  test_context.py
tests/commands/: test_ai.py  test_ask.py  test_localize.py  test_log.py  test_login.py  test_model.py  test_note.py  test_quote.py  test_remember.py  test_remind.py  test_skills.py  test_start.py  test_todo.py  test_tools.py  test_weather.py
(+21 files in other folders)
