[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "groq",
    "zhipuai",
    "prompt_toolkit",
    "requests",
    "ecdsa",
    "fastapi",
    "uvicorn[standard]",
]

[tool.setuptools]
py-modules = ["main", "bot", "context", "result"]
packages = ["commands", "app", "app.routes"]

[project.scripts]
spark = "main:main"
